samples/OK/string_plus_condit.php
<?php
declare(strict_types=1);
null.( 1===2);