samples/SEMANTIC_ERROR/division_by_zero2.php
<?php
declare(strict_types=1);
//ERROR[8]
$d = 1 / 0000.0000;